# Treinamento-Programacao-Competitiva

./: CMakeLists.txt
BC1001/: main.c
BC3301/: main.cpp
questoes/BC1020/: main.c
questoes/BC1168/: main.c
questoes/BC1308/: main.c
questoes/BC1467/: main.c
questoes/BC1805/: main.c
questoes/BC2168/: main.c
questoes/BC2234/: main.c
questoes/BC2419/: main.c
questoes/BC2596/: main.c
questoes/BC2757/: main.c
questoes/BC3056/: main.c
questoes/BC3106/: main.c
